# pytomata

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml  pytomata.zsh  setup.py
pytomata/: pytomata.zsh
src/: pytomata.py
tests/: test_pytomata.py
