[project]
name = "pytomata"
version = "0.2.0"
description = "Automated virtual environment management made dead-simple."
authors = ["Filip Godlewski <filip.godlewski@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/filipgodlewski/pytomata"
repository = "https://github.com/filipgodlewski/pytomata"
documentation = "https://github.com/filipgodlewski/pytomata"
keywords = ["venv"]
classifiers = [
    "Topic :: Software Development"
]

[dependencies]
python = "^3.8"
click = "^7.1.2"

[dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"
